Startpage added, Order form details added, bug fixed

--- a/order/order.less
+++ b/order/order.less
@@ -104,7 +104,7 @@ body {
   .detail {
     border-radius: 5px;
     margin: 20px;
-    height: inherit;
+    height: auto;
     background-color: @mainWhite;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -129,7 +129,10 @@ body {
 }
 
 .padding-less {
-  padding: 0px;
+  padding: 20px;
+}
+.carType button{
+    margin:100px;
 }
 
 .bulb{
