--- a/order/order.less
+++ b/order/order.less
@@ -16,18 +16,23 @@ body {
 }
 
 .main-container {
+
+
   width: 100%;
   height: 100%;
-
+  .coloumn-container{
+    padding-left: 40px;
+    padding-right: 40px;
+  }
 }
 
 .all-block {
 
-  margin-bottom: 30px;
   height: 400px;
   .card {
+    margin-top: 20px;
     border-radius: 5px;
-    margin: 20px;
+
     height: inherit;
     background-color: @mainWhite;
     padding-top: 5px;
@@ -88,22 +93,26 @@ body {
     }
     .price {
       height: 88%;
+
       padding: 10px;
       padding-left: 0px;
       padding-top: 0px;
       border-bottom-right-radius: 5px;
       .detail-price{
+        position: relative;
         height: inherit;
         border: solid 1px @mainGrey;
         border-bottom-right-radius: 5px;
         border-top-right-radius: 5px;
+        .order-button{
 
+        }
       }
     }
   }
   .detail {
     border-radius: 5px;
-    margin: 20px;
+    margin-top: 20px;
     height: inherit;
     background-color: @mainWhite;
     padding-top: 5px;
@@ -133,12 +142,50 @@ body {
 }
 
 .bulb{
-  font-size: 18px;
-  font-weight: bold;
   margin: 10px;
-  padding: 5px;
-  border-radius: 5px;
-  color: white;
-  background-color: @mainYellow;
+  font-size: 16px;
+  font-weight: bold;
+
 }
 
+.money{
+  position: absolute;
+  bottom:  10px;
+  right: 10px;
+  float: right;
+  float: bottom;
+  font-size: 20px;
+  font-weight: bold;
+  color: @mainYellow;
+}
+
+@media (max-width: 768px)	{
+  .card{
+    height: auto!important;
+    .input-fields{
+    height: 50%!important;
+
+      .from{
+        width: 100%!important;;
+        border-radius: 0px!important;
+        border: 1px solid @mainGrey !important;
+        margin-bottom: 5px;
+      }
+      .to{
+        width: 100%!important;
+        border-radius: 0px!important;
+        border: 1px solid @mainGrey !important;
+      }
+    }
+    .map-field{
+      display: none;
+    }
+    .price{
+      height: 50%!important;
+      padding: 0px !important;
+      .detail-price {
+        border-radius: 0px !important;
+      }
+    }
+  }
+}
