--- a/order/order.less
+++ b/order/order.less
@@ -211,10 +211,10 @@ body {
   cursor: pointer;
   height: auto;
   width: auto;
-
-  border: 2px solid white;
-  background-color: @mainYellow;
-  color: white;
+  border-radius: 5px;
+  border: 2px solid @mainYellow;
+  background-color: #F7F7F7;
+  color: @mainYellow;
   font-size: 25px;
   font-weight: bold;
   margin: 20px;
@@ -224,5 +224,5 @@ body {
 }
 .order-button:hover{
   color: white;
-  background-color: #f3b503;
+  background-color: @mainYellow;
 }
