--- a/frontend/less/startpage.less
+++ b/frontend/less/startpage.less
@@ -80,7 +80,12 @@ html {
         margin-top:90%;
     }
 }
+.advantages{
+  text-align:left;
+  position:relative;
+  left:40%;
 
+}
 .about-section {
     height: auto;
     padding-top: 50px;
@@ -102,7 +107,14 @@ html {
         float:inherit;
     }
 }
+.weWork{
+  font-size:23px;
+  left:40%;
 
+  .circles{
+    color:@mainColor;
+  }
+}
 .services-section {
     height:auto;
     padding-top: 50px;
