--- a/order/order.less
+++ b/order/order.less
@@ -12,9 +12,13 @@ body {
 .header {
   width: 100%;
   height: 70px;
-  background-color: black;
+  background-color: darkgrey;
 }
-
+.hash{
+  color:white;
+  margin-left:20px;
+  margin-top:10px;
+font-size: 30px;}
 .main-container {
 
 
@@ -207,11 +211,16 @@ body {
 .form-group{
   margin-bottom: 12px;
 }
+.success{
+  text-align: center;
+  color:@mainYellow;
+  margin-top:200px;
+}
 .order-button{
   cursor: pointer;
   height: auto;
-  width: auto;
-  border-radius: 5px;
+  width: 300px;
+  text-align:center;
   border: 2px solid @mainYellow;
   background-color: #F7F7F7;
   color: @mainYellow;
