--- a/order/order.css
+++ b/order/order.css
@@ -1,34 +1,35 @@
 body {
   margin: 0%;
   padding: 0%;
-  background-color:black;
+  background-color: #dcdcdc;
 }
 .header {
   width: 100%;
   height: 70px;
-  background-color: black;
+  background-color: darkgrey;
+}
+.hash {
+  color: white;
+  margin-left: 20px;
+  margin-top: 10px;
+  font-size: 30px;
 }
 .main-container {
   width: 100%;
   height: 100%;
-  background-color:#dcdcdc;
-
 }
 .main-container .coloumn-container {
   padding-left: 30px;
   padding-right: 30px;
-  background-color:#dcdcdc;
-
 }
 .all-block {
   height: 400px;
-
 }
 .all-block .card {
   margin-top: 20px;
   border-radius: 5px;
   height: inherit;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   padding-top: 5px;
 }
 .all-block .card .title {
@@ -97,7 +98,7 @@ body {
   border-radius: 5px;
   margin-top: 20px;
   height: auto;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   padding-top: 5px;
   padding-bottom: 5px;
 }
@@ -168,7 +169,6 @@ body {
   height: 88%;
   padding: 20px;
   padding-bottom: 0px;
-
 }
 .radio {
   display: inline;
@@ -176,11 +176,16 @@ body {
 .form-group {
   margin-bottom: 12px;
 }
+.success {
+  text-align: center;
+  color: #fcc014;
+  margin-top: 200px;
+}
 .order-button {
   cursor: pointer;
   height: auto;
-  width: auto;
-  border-radius: 5px;
+  width: 300px;
+  text-align: center;
   border: 2px solid #fcc014;
   background-color: #F7F7F7;
   color: #fcc014;
